--- a/ZalithLauncher/src/main/AndroidManifest.xml
+++ b/ZalithLauncher/src/main/AndroidManifest.xml
@@ -4,18 +4,23 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:name="com.movtery.zalithlauncher.ZLApplication"
-        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:networkSecurityConfig="@xml/network_security_config"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="${launcher_name}"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.ZalithLauncher"
+        android:supportsRtl="true"
+        android:allowBackup="true"
+        android:requestLegacyExternalStorage="true"
         tools:targetApi="31"
         tools:ignore="DiscouragedApi">
         <activity
