feat: integrate Pojav native backend

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.9.1"
+bytehook = "1.0.10"
 coilCompose = "3.1.0"
 compress = "1.27.1"
 commonsCodec = "1.17.1"
@@ -35,6 +36,7 @@ androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+bytehook = { module = "com.bytedance:bytehook", version.ref = "bytehook" }
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
 commons-compress = { module = "org.apache.commons:commons-compress", version.ref = "compress" }
 commons-codec = { module = "commons-codec:commons-codec", version.ref = "commonsCodec" }
