--- a/ZalithLauncher/gradle.properties
+++ b/ZalithLauncher/gradle.properties
@@ -5,3 +5,7 @@ launcher_app_name=Zalith Launcher
 default_crypto_key=020-4a0-5d0540dacb9-c2d1-6a
 default_store_password=vh#nn%N(#eNjwfA78-77s6&f-cdd(@-7eana-e%!nhj%))!@c
 default_key_password=sfv72ghSSNQaadf99-Q69!2
+
+# launcher version
+launcher_version_code=190000
+launcher_version_name=2.0.0_alpha-20250501a
