--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ materialColorUtilities = "2.1.1"
 materialIcons = "1.7.8"
 navigationCompose = "2.8.9"
 okhttp = "4.12.0"
+proxyClientAndroid = "0.0.2"
 stringfog-gradlePlugin = "5.2.0"
 stringfog-xor = "5.0.0"
 xz = "1.9"
@@ -55,6 +56,7 @@ ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx
 material = { module = "com.google.android.material:material", version.ref = "material" }
 material-color-utilities = { module = "com.materialkolor:material-color-utilities", version.ref = "materialColorUtilities" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+proxy-client-android = { module = "top.fifthlight.touchcontroller:proxy-client-android", version.ref = "proxyClientAndroid" }
 stringfog-gradle-plugin = { module = "com.github.megatronking.stringfog:gradle-plugin", version.ref = "stringfog-gradlePlugin" }
 stringfog-xor = { module = "com.github.megatronking.stringfog:xor", version.ref = "stringfog-xor" }
 xz = { module = "org.tukaani:xz", version.ref = "xz" }
